@@ -13,6 +13,7 @@ Version 1.11.5+dev:
      * ca_id is now an optional parameter for all MAIs
      * ca_score is now an optional parameter for almost all MAIs
      * Bug fixes for Patrol, Messenger, Multipack Wolves and all Guardian MAIs
+     * [goal] tags in [ai] blocks with turns= or time_of_day= will now work.
  * Language and i18n:
    * Updated translations:
  * Miscellaneous and bug fixes
